name:                smtlib-backends
version:             0.1
synopsis:            A simple way to interact with an SMT solver process.
description:         A simple way to interact with an SMT solver process.
license:             MIT
license-file:        LICENSE
author:              Quentin Aristote
maintainer:          quentin.aristote@tweag.io
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  ghc-options:         -Wall -Wunused-packages
  exposed-modules:     SMTLIB.Backends
                       SMTLIB.Backends.Process
  other-extensions:    Safe
  build-depends:       base >=4.8 && <10,
                       async,
                       bytestring >= 0.11.2,
                       typed-process 
  default-language:    Haskell2010

test-suite test
  type: exitcode-stdio-1.0
  hs-source-dirs:      tests/src
  main-is: Main.hs
  other-modules:       SMTLIB.Backends.Tests
                       SMTLIB.Backends.Tests.Sources
  ghc-options:         -threaded -Wall -Wunused-packages
  build-depends:       base >= 4.15,
                       bytestring >= 0.10,
                       smtlib-backends,
                       tasty,
                       tasty-hunit
  default-language:    Haskell2010
