name:          smtlib-backends
version:       0.1
synopsis:
  Low-level functions for SMT-LIB-based interaction with SMT solvers. 

description:
  This library provides an extensible interface for interacting with SMT solvers using SMT-LIB. It has built-in support for running solvers as external processes, and the smtlib-backends-z3 package provides a backend that uses inlined calls to Z3's C API.

license:       MIT
license-file:  LICENSE
author:        Quentin Aristote
maintainer:    quentin.aristote@tweag.io
build-type:    Simple
category:      SMT
cabal-version: >=1.10

source-repository head
  type:     git
  location: https://github.com/tweag/smtlib-backends

source-repository this
  type:     git
  location: https://github.com/tweag/smtlib-backends
  tag:      0.1

library
  hs-source-dirs:   src
  ghc-options:      -Wall -Wunused-packages
  exposed-modules:
    SMTLIB.Backends
    SMTLIB.Backends.Process

  other-extensions: Safe
  build-depends:
      async
    , base           >=4.14 && <4.17.0
    , bytestring     >=0.10
    , data-default
    , typed-process

  default-language: Haskell2010

test-suite test
  type:             exitcode-stdio-1.0
  hs-source-dirs:   tests/src
  main-is:          Main.hs
  other-modules:
    Examples
    SMTLIB.Backends.Tests
    SMTLIB.Backends.Tests.Sources

  ghc-options:      -threaded -Wall -Wunused-packages
  build-depends:
      base             >=4.14 && <4.17.0
    , bytestring       >=0.10
    , data-default
    , smtlib-backends
    , tasty
    , tasty-hunit
    , typed-process    >=0.2

  default-language: Haskell2010
