name:                smtlib-backends-tests
version:             0.1
synopsis:            Testing SMT-LIB backends.
description:         This library provides common functions and values used for testing SMT-LIB backends, as provided by the smtlib-backends library.
license:             MIT
license-file:        LICENSE
author:              Quentin Aristote
maintainer:          quentin.aristote@tweag.io
build-type:          Simple
cabal-version:       >=1.10

library
  ghc-options:         -Wall -Wunused-packages
  hs-source-dirs:      src
  main-is:             Main.hs
  exposed-modules:     SMTLIB.Backends.Tests
  other-modules:       SMTLIB.Backends.Tests.Sources
  build-depends:       base >= 4.15,
                       bytestring >= 0.10,
                       smtlib-backends,
                       tasty,
                       tasty-hunit
  default-language: Haskell2010
