name:          smtlib-backends-tests
version:       0.1
synopsis:      Testing SMT-LIB backends.
description:
  This library provides common functions and values used for testing SMT-LIB backends, as provided by the smtlib-backends library.

license:       MIT
license-file:  LICENSE
author:        Quentin Aristote
maintainer:    quentin.aristote@tweag.io
build-type:    Simple
category:      SMT, Testing
cabal-version: >=1.10

source-repository head
  type:     git
  location: https://github.com/tweag/smtlib-backends
  subdir:   tests

source-repository this
  type:     git
  location: https://github.com/tweag/smtlib-backends
  tag:      0.1
  subdir:   tests

library
  ghc-options:      -Wall -Wunused-packages
  hs-source-dirs:   src
  exposed-modules:  SMTLIB.Backends.Tests
  other-modules:    SMTLIB.Backends.Tests.Sources
  build-depends:
      base             >=4.15 && <4.17.0
    , smtlib-backends
    , tasty
    , tasty-hunit

  default-language: Haskell2010
